--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ crashlytics-build.properties
 Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_16PPU_320x240_Pixel Snapped.preset.meta
 Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_32PPU_320x240_Pixel Snapped.preset.meta
 Pr01/Temp/UnityLockfile
+Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_16PPU_320x240_Pixel Snapped.preset.meta
+Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_32PPU_320x240_Pixel Snapped.preset.meta
+Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_32PPU_320x240_Pixel Snapped.preset
+Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_16PPU_320x240_Pixel Snapped.preset
