--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes 
 Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_32PPU_320x240_Pixel Snapped.preset.meta
 Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_32PPU_320x240_Pixel Snapped.preset
 Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@3.0.2/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_16PPU_320x240_Pixel Snapped.preset
+Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@2.1.0/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_16PPU_320x240_Pixel Snapped.preset
+Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@2.1.0/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_16PPU_320x240_Pixel Snapped.preset.meta
+Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@2.1.0/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_32PPU_320x240_Pixel Snapped.preset.meta
+Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@2.1.0/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_32PPU_320x240_Pixel Snapped.preset
