--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@2.1.0/Samples~/Scenes 
 Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@2.1.0/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_16PPU_320x240_Pixel Snapped.preset.meta
 Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@2.1.0/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_32PPU_320x240_Pixel Snapped.preset.meta
 Pr01/Pr01/Library/PackageCache/com.unity.2d.pixel-perfect@2.1.0/Samples~/Scenes and Extras/Scenes/Presets/Pixel Perfect Cameras/PixelPerfectCamera_32PPU_320x240_Pixel Snapped.preset
+Pr01/Pr01/Temp/UnityLockfile
